implement series and page with persistence

--- a/data/series/BUILD
+++ b/data/series/BUILD
@@ -3,16 +3,17 @@ load("@io_bazel_rules_go//go:def.bzl", "go_library")
 package(default_visibility = ["//visibility:public"])
 
 go_library(
-    name = "page",
+    name = "series",
     srcs = [
-        "page.go",
         "persistence.go",
+        "series.go",
     ],
-    importpath = "yiwei/data/page",
+    importpath = "yiwei/data/series",
     deps = [
         "//data/persistence",
+        "//data/page",
         "//proto:data_go_proto",
-        "@com_github_google_uuid//:go_default_library",
+        "//data/series/index",
         "@org_golang_google_protobuf//proto:go_default_library",
     ],
 )
