--- a/proto/BUILD
+++ b/proto/BUILD
@@ -11,9 +11,29 @@ proto_library(
 )
 
 proto_library(
+    name = "entry_proto",
+    srcs = [
+        "entry.proto",
+    ],
+    deps = [
+        ":label_proto",
+    ],
+)
+
+proto_library(
     name = "page_proto",
     srcs = [
         "page.proto",
+    ],
+    deps = [
+        ":entry_proto",
+    ],
+)
+
+proto_library(
+    name = "series_proto",
+    srcs = [
+        "series.proto",
     ],
     deps = [
         ":label_proto",
@@ -22,9 +42,11 @@ proto_library(
 
 go_proto_library(
     name = "data_go_proto",
-    importpath = "yiwei/data/proto",
+    importpath = "yiwei/proto",
     protos = [
+        ":entry_proto",
         ":label_proto",
         ":page_proto",
+        ":series_proto",
     ],
 )
