--- a/data/persistence/BUILD
+++ b/data/persistence/BUILD
@@ -3,16 +3,13 @@ load("@io_bazel_rules_go//go:def.bzl", "go_library")
 package(default_visibility = ["//visibility:public"])
 
 go_library(
-    name = "page",
+    name = "persistence",
     srcs = [
-        "page.go",
-        "persistence.go",
+        "path.go",
+        "proto.go",
     ],
-    importpath = "yiwei/data/page",
+    importpath = "yiwei/data/persistence",
     deps = [
-        "//data/persistence",
-        "//proto:data_go_proto",
-        "@com_github_google_uuid//:go_default_library",
         "@org_golang_google_protobuf//proto:go_default_library",
     ],
 )
