create database server to organize db functions

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -4,6 +4,6 @@
         "GOPACKAGESDRIVER": "${workspaceFolder}/gopackagesdriver.sh",
     },
     "gopls": {
-        "formatting.local": "geendo"
+        "formatting.local": "yiwei"
     }
 }
