slight adjust write order; use map for label storage

--- a/database/series/BUILD
+++ b/database/series/BUILD
@@ -12,6 +12,7 @@ go_library(
     ],
     importpath = "yiwei/database/series",
     deps = [
+        "//database/label",
         "//database/page",
         "//database/persistence",
         "//database/series/index",
