extract interface for fle io for potential caching opportunities

--- a/database/persistence/BUILD
+++ b/database/persistence/BUILD
@@ -5,6 +5,7 @@ package(default_visibility = ["//visibility:public"])
 go_library(
     name = "persistence",
     srcs = [
+        "file.go",
         "path.go",
         "proto.go",
     ],
