add label filter support

--- a/database/label/filter/BUILD
+++ b/database/label/filter/BUILD
@@ -3,13 +3,13 @@ load("@io_bazel_rules_go//go:def.bzl", "go_library")
 package(default_visibility = ["//visibility:public"])
 
 go_library(
-    name = "label",
+    name = "filter",
     srcs = [
-        "convert.go",
-        "env.go",
+        "parse.go",
     ],
-    importpath = "yiwei/database/label",
+    importpath = "yiwei/database/label/filter",
     deps = [
+        "//database/label/filter/impl",
         "//proto:entity_go_proto",
     ],
 )
