add query interface

--- a/database/label/filter/BUILD
+++ b/database/label/filter/BUILD
@@ -5,10 +5,12 @@ package(default_visibility = ["//visibility:public"])
 go_library(
     name = "filter",
     srcs = [
+        "filter.go",
         "parse.go",
     ],
     importpath = "yiwei/database/label/filter",
     deps = [
+        "//database/label",
         "//database/label/filter/impl",
         "//proto:entity_go_proto",
     ],
