implement query interface

--- a/database/BUILD
+++ b/database/BUILD
@@ -9,11 +9,13 @@ go_library(
     ],
     importpath = "yiwei/database",
     deps = [
+        "//database/label/filter",
         "//database/persistence",
         "//database/series",
         "//proto:entity_go_proto",
         "@org_golang_google_grpc//codes:go_default_library",
         "@org_golang_google_grpc//status:go_default_library",
+        "@org_golang_x_exp//maps:go_default_library",
         "@org_uber_go_zap//:go_default_library",
     ],
 )
